--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       * {
         font-family: "Roboto", sans-serif;
         margin: 0;
+        overflow-x: hidden;
       }
     </style>
   </head>
